--- a/albionboxes/prod_living_room_media_controller.yaml
+++ b/albionboxes/prod_living_room_media_controller.yaml
@@ -28,8 +28,10 @@ packages:
   albion_volume_dial: !include common/albion_v3_volume_dial.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
-  gpio_expander: !include common/mcp23017_expander.yaml
+#  gpio_expander: !include common/mcp23017_expander.yaml
+  gpio_expander: !include { file: common/mcp23017_expander.yaml, vars: { bus_name: "grove" } }
   rufus_activity_request: !include common/rufus_activity_request.yaml
+  external_ic2_bus: !include common/dial/dial_port_a_ic2.yaml
 
 binary_sensor:
   - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A0", pin_number: 0, rufus_url: "${rufus_url}", activity_name: "All Off", activity_url_fragment: "all-off?kitchen=0&dining_room=0" } }
