--- a/albionboxes/common/albion_v2_volume_dial.yaml
+++ b/albionboxes/common/albion_v2_volume_dial.yaml
@@ -30,6 +30,7 @@ packages:
   spi: !include ./dial/dial_spi.yaml
   uart: !include ./dial/dial_uart.yaml
   dial_speaker: !include ./dial/dial_speaker.yaml
+  volume_set_script: !include ./dial/scripts/hass_zone_volume_set_script.yaml
 
 # https://esphome.io/guides/automations.html#global-variables
 globals:
@@ -51,7 +52,7 @@ globals:
     restore_value: no
 
 sensor:
-  - <<: !include ./dial/dial_volume_rotary_encoder.yaml
+  - <<: !include ./dial/rotary_encoder/dial_simple_volume_rotary_encoder.yaml
   - <<: !include ./dial/dial_hass_volume_sensor.yaml
 
 light:
@@ -61,50 +62,8 @@ output:
   - <<: !include ./dial/dial_backlight_output.yaml
   - <<: !include ./dial/dial_speaker_output.yaml
 
-# https://esphome.io/components/display/ili9xxx
 display:
-  - platform: ili9xxx
-    model: gc9a01a
-    id: my_lcd
-    cs_pin: GPIO7
-    dc_pin: GPIO4
-    rotation: ${display_rotation}
-    update_interval: 1s
-    reset_pin: GPIO8
-    dimensions:
-      width: 240
-      height: 240
-    # https://esphome.io/components/display/index.html
-    pages:
-      - id: VolumePage
-        lambda: |-
-          float screenheight = it.get_height();
-          float screenwidth = it.get_width();
-          float halfscreenheight = screenheight / 2;
-          float halfscreenwidth = screenwidth / 2;
-
-          // Print volume as percent
-          it.printf(halfscreenwidth, 20, id(roboto48), TextAlign::CENTER, "%.0f", id(media_volume_value));
-
-          // media_pause Circle
-          it.filled_circle(halfscreenwidth, halfscreenheight - 15, 50, my_light_blue);  
-          //if ( id(appletv_media).state == "paused" || id(appletv_media).state == "idle" ) {
-          //  it.image(halfscreenwidth, halfscreenheight - 15, media_play_large, ImageAlign::CENTER);
-          //} else {
-          //  it.image(halfscreenwidth, halfscreenheight - 15, media_pause_large, ImageAlign::CENTER);
-          //}
-
-          // Mute Toggle Circle
-          it.filled_circle(halfscreenwidth, 200, 30, my_light_blue);  
-          it.image(halfscreenwidth, 200, volume_mute, ImageAlign::CENTER);
-
-    on_page_change:
-      - to: VolumePage
-        then:
-          - sensor.rotary_encoder.set_value:
-              id: rotaryencoder
-              value: !lambda 'return id(receiver_zone_volume).state * 100.0;'
-          - component.update: my_lcd
+  - <<: !include ./dial/display/dial_default_display.yaml
 
 binary_sensor:
   - <<: !include ./dial/dial_button.yaml
