--- a/albionboxes/dev_volume_dial.yaml
+++ b/albionboxes/dev_volume_dial.yaml
@@ -10,10 +10,11 @@ substitutions:
   mirror_x: "false"
   mirror_y: "false"
   rufus_url: !secret rufus_url
-  dial_rfid_tag_1: "04-11-1D-7D-B8-2A-81"
-  first_tag_activity: "nintendo"
-  dial_rfid_tag_2: "04-11-1D-7D-B8-2A-81"
-  second_tag_activity: "johncast"
+  dial_rfid_tag_test: "04-11-1D-7D-B8-2A-81"
+  dial_rfid_tag_1: "04-51-22-7D-B8-2A-81"
+  first_tag_activity: "johncast"
+  dial_rfid_tag_2: "04-46-22-7D-B8-2A-81"
+  second_tag_activity: "nintendo"
 
 # inspired by https://github.com/RoyalPineapple/esphome/blob/main/m5dial/m5_dial_test.yaml
 
@@ -64,6 +65,14 @@ button:
 binary_sensor:
   # https://esphome.io/components/binary_sensor/rc522.html#rc522-binary-sensor
   - platform: rc522
+    uid: ${dial_rfid_tag_test}
+    name: "${friendly_name} NFC Tag Dial"
+    on_release:
+      then:
+        - logger.log: "Got RFID Tag for for tag dial"
+
+  # https://esphome.io/components/binary_sensor/rc522.html#rc522-binary-sensor
+  - platform: rc522
     uid: ${dial_rfid_tag_1}
     name: "${friendly_name} NFC Tag ${first_tag_activity}"
     on_release:
@@ -76,14 +85,14 @@ binary_sensor:
         - logger.log: "Done with RFID Tag for activity: ${first_tag_activity}"
 
   # https://esphome.io/components/binary_sensor/rc522.html#rc522-binary-sensor
-#  - platform: rc522
-#    uid: ${dial_rfid_tag_2}
-#    name: "${friendly_name} NFC Tag ${second_tag_activity}"
-#    on_release:
-#      then:
-#        - logger.log: "Got RFID Tag for for activity: ${second_tag_activity}"
-#        - script.execute:
-#            id: rufus_activity_request
-#            rufus_url: "${rufus_url}"
-#            activity: "${second_tag_activity}"
-#        - logger.log: "Done with RFID Tag for activity: ${second_tag_activity}"
+  - platform: rc522
+    uid: ${dial_rfid_tag_2}
+    name: "${friendly_name} NFC Tag ${second_tag_activity}"
+    on_release:
+      then:
+        - logger.log: "Got RFID Tag for for activity: ${second_tag_activity}"
+        - script.execute:
+            id: rufus_activity_request
+            rufus_url: "${rufus_url}"
+            activity: "${second_tag_activity}"
+        - logger.log: "Done with RFID Tag for activity: ${second_tag_activity}"
