--- a/albionboxes/common/dial/touchscreen/dial_media_zone_mute_button.yaml
+++ b/albionboxes/common/dial/touchscreen/dial_media_zone_mute_button.yaml
@@ -9,8 +9,12 @@
     then:
       - lambda: |-
           ESP_LOGD("media_player_volume_mute", "touched zone muted button");
-      - script.execute:
-          id: hass_zone_mute_set
-          entity_id: "${receiver_zone_media_player_entity}"
-      - lambda: |-
-          ESP_LOGD("media_player_volume_mute", "after hass muted action");
+      - if:
+          condition:
+            light.is_on: backlight
+          then:
+            - script.execute:
+                id: hass_zone_mute_set
+                entity_id: "${receiver_zone_media_player_entity}"
+            - lambda: |-
+                ESP_LOGD("media_player_volume_mute", "after hass muted action");
