--- a/albionboxes/prod_gaggiatimer.yaml
+++ b/albionboxes/prod_gaggiatimer.yaml
@@ -55,9 +55,11 @@ script:
       delay_seconds: int
     then:
       - logger.log: "Start Gaggia timer countdown"
-      - logger.log:
-          format: "Now count down delay_seconds: %d"
-          args: [ 'delay_seconds' ]
+      - lambda: |-
+          ESP_LOGD("gaggia_timer_script", "Now count down delay_seconds: %d", delay_seconds);
+#      - logger.log:
+#          format: "Now count down delay_seconds: %d"
+#          args: [ 'delay_seconds' ]
 #      - logger.log: "Now count down delay_seconds: ${delay_seconds}"
       - lambda: !lambda |-
           id(timer_countdown_switch).publish_state(true);
@@ -73,6 +75,8 @@ script:
       - logger.log:
           format: "Timer done and %d has elapsed, first play audio"
           args: [ 'delay_seconds' ]
+      - lambda: |-
+          ESP_LOGD("gaggia_timer_script", "Timer done and %d has elapsed, first play audio", delay_seconds);
 #      - logger.log: "Timer done and ${delay_seconds} has elapsed, first play audio"
       - media_player.play_media: ${media_file}
       - logger.log: "Now finish and trigger light timer_switch"
