--- a/albionboxes/prod_gaggiatimer.yaml
+++ b/albionboxes/prod_gaggiatimer.yaml
@@ -17,7 +17,8 @@ substitutions:
   expiration_light_delay: "3s"
 
 packages:
-  esphome: !include common/default_esphome.yaml
+#  esphome: !include common/default_esphome.yaml
+  esphome: !include common/gaggia_timer_esphome.yaml
   logging: !include common/default_logger.yaml
   wifi: !include common/wifi.yaml
   esp32: !include common/m5atom_device.yaml
