--- a/albionboxes/prod_living_room_volume_dial_v2.yaml
+++ b/albionboxes/prod_living_room_volume_dial_v2.yaml
@@ -3,9 +3,10 @@ substitutions:
   friendly_name: Living Room Volume Dial
   area: Living Room
   comment: "Volume rotary controller for the Living Room"
-  box_config_file_name: prod_living_room_volume_dial
+  box_config_file_name: prod_living_room_volume_dial_v2
   display_rotation: '180'
   receiver_zone_media_player_entity: "media_player.denon_avr_x4300h_main_zone_living_room"
+  appletv_media_player_entity: "media_player.superduper_appletv"
   swap_xy: "false"
   mirror_x: "false"
   mirror_y: "true"
@@ -34,7 +35,8 @@ packages:
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
   rufus_activity_request: !include common/rufus_activity_request.yaml
-  albion_volume_dial: !include common/albion_v4_volume_dial.yaml
+#  albion_volume_dial: !include common/albion_v4_volume_dial.yaml
+  albion_volume_dial: !include common/albion_v5_volume_dial.yaml
 
 binary_sensor:
   - <<: !include { file: common/dial/dial_rfid_tag_rufus_activity_sensor.yaml, vars: { rfid_tag_uid: "${dial_rfid_tag_1}", rufus_tag_activity: "${first_tag_activity}" } }
