--- a/albionboxes/common/dial/touchscreen/dial_media_appletv_playpause_button.yaml
+++ b/albionboxes/common/dial/touchscreen/dial_media_appletv_playpause_button.yaml
@@ -1,6 +1,6 @@
 - platform: touchscreen
   name: "${friendly_name} AppleTV Screen Play Pause Button"
-  page_id: VolumePage
+  page_id: "${page_id}"
   x_min: 90
   x_max: 150
   y_min: 170
